# Auj6

./: .env.example  .env.template  .gitignore  AUJ-Platform.code-workspace  Dockerfile  LINUX_SETUP.md  MANIFEST.in  METAAPI_READY.md  README.md  _fix_bug22.py  _temp_monitor.py  apply_all_dmt_patches.py  apply_dmt_patch1.py  apply_medium_priority_patches.py  check_indicator_health.py  count_indicators.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fix_all_indicators.py  fix_containers.py  fix_feedback_loop.py  fix_missing_parens.py  fix_syntax_corruption.py  install_economic_calendar.sh  patch_dmt_position_methods.py  patch_execution_handler.py  patch_execution_handler_safe.py  patch_execution_handler_v2.py  pip.conf  pyproject.toml  requirements-dev.txt  requirements-linux.txt  run_linux.py  run_optimized.py  safe_cleanup_script.py  setup_environment.bat  setup_environment.ps1  setup_environment.sh  setup_linux_metaapi.sh  (+13 more)
.agent/rules/: olevar-1.md
auj_platform/: __init__.py  add_initialize_method.py  requirements.txt  test_output.txt  verification_output.txt
auj_platform/.github/workflows/: api-tests.yml
auj_platform/config/: indicator_data_requirements.py  opportunity_radar_config.py  trading_pairs.py
auj_platform/config/agents/: decision_master.yaml  execution_expert.yaml  indicator_expert.yaml  microstructure_agent.yaml  momentum_agent.yaml  pair_specialist.yaml  pattern_master.yaml  risk_genius.yaml  session_expert.yaml  simulation_expert.yaml  strategy_expert.yaml  trend_agent.yaml
auj_platform/config/optimization/: feature_flags.yaml  selective_indicators.yaml
auj_platform/core/: __init__.py  platform_detection.py
auj_platform/dashboard/: __init__.py  app.py  chart_analysis.py  chart_indicators.py  chart_requirements.txt  deals_page.py  install_chart_dependencies.bat  install_chart_dependencies.sh  launch_dashboard.py  requirements.txt  start_dashboard.bat
auj_platform/dashboard/config/: dashboard_config.py  logging_config.py
auj_platform/dashboard/optimization/: __init__.py  optimization_controls.py  optimization_dashboard.py  optimization_metrics.py
auj_platform/dashboard/utils/: error_handling.py
auj_platform/docs/: INDICATOR_COUNT.md
auj_platform/scripts/: verify_platform_init.py
auj_platform/src/: __init__.py  config.py  main.py
auj_platform/src/account_management/: __init__.py  account_info.py  account_manager.py
auj_platform/src/agents/: base_agent.py  decision_master.py  economic_calendar_agent.py  execution_expert.py  indicator_expert.py  microstructure_agent.py  momentum_agent.py  pair_specialist.py  pattern_master.py  risk_genius.py  session_expert.py  simulation_expert.py  strategy_expert.py  trend_agent.py
auj_platform/src/ai_ensemble/: __init__.py  ensemble_manager.py  ensemble_models.py
auj_platform/src/analytics/: indicator_effectiveness_analyzer.py  performance_tracker.py
auj_platform/src/api/: main_api.py  main_api_OLD_backup.py  radar_api.py
auj_platform/src/broker_interfaces/: __init__.py  __init___NEW.py  base_broker.py  metaapi_broker.py  metaapi_broker_BACKUP.py  metaapi_broker_OLD_BACKUP.py  mt5_broker.py
auj_platform/src/config/: environment_config.json  low_resource_config.yaml
auj_platform/src/coordination/: __init__.py  agent_coordinator.py  genius_agent_coordinator.py  messaging_coordinator.py  opportunity_radar.py  performance_monitor.py
auj_platform/src/core/: __init__.py  (+24 more)
auj_platform/tests/: cleanup_indicators.py  debug_import.py  debug_output.txt  debug_syntax.py  debug_syntax_detailed.py  deep_verify_final.py  prune_requirements.py  test_event_driven_execution.py  verify_agent_discovery.py  verify_event_driven_flow.py  verify_hourly_loop_missing.py  verify_indicator_system.py  verify_platform_integration.py  verify_risk_persistence.py
config/: .env.template  README.md  config_loader.py  linux_deployment.yaml  main_config.yaml  metaapi_config.yaml  monitoring_config.yaml  mt5_config.yaml.deprecated  production_conservative.yaml
docker/nginx/: nginx.conf
docker/prometheus/: alerts.yml  prometheus.yml
docker/rabbitmq/: rabbitmq.conf
docs/: Early_Decision_System_Removal_Final_Report.md  system_overview.md
docs/architecture/: coordination_system.md  platform_architecture_diagrams.md
docs/archived/: AUJ_PLATFORM_BRANDING_UPDATE.md
docs/configuration/: CONFIGURATION_REPAIR_PLAN.md  coordination_settings.md
docs/databases/: economic_calendar_database_schema.md  economic_calendar_deployment_guide.md
docs/deployment/: MT5_INTEGRATION_COMPLETION_REPORT.md  PHASE5_INTEGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md
docs/development/: AUG_PLAN.md  api_endpoint_integration_summary.md  messaging_refactor_summary.md
docs/features/: CHART_ANALYSIS_IMPROVEMENTS.md  DEALS_PAGE_IMPLEMENTATION_SUMMARY.md  early_decision_removal_migration.md
docs/reports/: COMPLETE_BUG_VERIFICATION_REPORT.md  COMPLETE_BUG_VERIFICATION_REPORT_NEW.md  CRITICAL_FIXES_AUDIT_REPORT.md  CRITICAL_FIXES_FINAL_VERIFICATION_REPORT.md  EXPERT_DEEP_AUDIT_REPORT.md  FIXED_BUGS_REPORT.md  PLATFORM_ARCHITECTURE_OVERVIEW.md  QUICK_AUDIT_9_FILES_REPORT.md  REMEDIATION_SUMMARY.md  TEMP_OLD_REPORT.md  auj_platform_comprehensive_audit_report.md  auj_platform_critical_action_items.md  phase5_path_cleanup_completion_report.md  phase6_verification_completion_report.md  platform_architecture_overview.md.resolved
models/ensemble/: test_decision tree_decision_tree.joblib  test_logistic regression_logistic_regression.joblib  test_random forest_random_forest.joblib
publishing_solutions/: MANIFEST.in  auj_platform___init__.py  pyproject.toml  setup.py
scripts/: backup_recovery.ps1  backup_recovery.sh  database_migration_remove_early_decision.py  deploy-linux.sh  final_validation.py  install-linux.sh  manage-services.sh  migrate_economic_calendar_db.bat  migrate_economic_calendar_db.py  migrate_economic_calendar_db.sh  monitor-linux.sh  risk_mitigation_validator.py  update-platform.sh
tests/: run_tests.py  test_economic_monitor_comprehensive.py  test_parallel_coordination.py  validate_optimizations.py
(+328 files in other folders)
