# AUJ Platform Comprehensive Configuration
# =========================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auj-platform"
version = "1.0.0"
description = "Advanced AI Trading Platform for Humanitarian Impact"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AUJ Platform Development Team", email = "support@auj-platform.com"}
]
keywords = ["trading", "ai", "machine-learning", "finance", "humanitarian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Environment :: Web Environment",
]
requires-python = ">=3.9"
dependencies = [
    # Core Dependencies
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",

    # MetaApi Integration (Primary for Linux deployment)
    "metaapi-cloud-sdk>=27.0.0",
    "websockets>=11.0.0",
    "asyncio-mqtt>=0.13.0",
    "aiohttp>=3.8.0",

    # Network and API
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",

    # Data Providers (Cross-platform)
    "yfinance>=0.2.0",
    "ccxt>=4.0.0",
    "python-binance>=1.0.19",

    # Technical Analysis
    "ta-lib>=0.4.0",
    "pandas-ta>=0.3.0",

    # Database and Storage
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.28.0",
    "databases[postgresql]>=0.7.0",

    # Visualization and Dashboard
    "streamlit>=1.25.0",
    "plotly>=5.15.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Machine Learning
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "xgboost>=1.7.0",

    # System Monitoring and Utilities
    "psutil>=5.9.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.0.0",
    "watchdog>=3.0.0",

    # Message Broker and Async
    "redis>=5.0.0",
    "celery>=5.3.0",
    "aio-pika>=9.0.0",

    # Security and Cryptography
    "cryptography>=41.0.0",
    "bcrypt>=4.1.0",
    "python-jose[cryptography]>=3.3.0",

    # Utilities and Parsing
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.0",
    "schedule>=1.2.0",
    "dependency-injector>=4.41.0",

    # Legacy MT5 (Windows only - conditional install)
    "MetaTrader5>=5.0.0; sys_platform=='win32'",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.4.0",
]

# Linux deployment dependencies
linux = [
    "systemd-python>=235",
    "supervisor>=4.2.0",
    "gunicorn>=21.2.0",
    "nginx-python>=1.2.0",
]

# Container deployment dependencies
container = [
    "docker>=6.1.0",
    "kubernetes>=27.2.0",
    "helm-python>=0.1.0",
]

# Monitoring and observability
monitoring = [
    "grafana-api>=1.0.3",
    "prometheus-api-client>=0.5.3",
    "elasticsearch>=8.9.0",
    "loguru>=0.7.0",
]

# Advanced analytics
analytics = [
    "numpy-financial>=1.0.0",
    "quantlib>=1.32",
    "empyrical>=0.5.5",
    "pyfolio>=0.9.2",
    "zipline-reloaded>=3.0.0",
]

# Performance optimization
performance = [
    "numba>=0.58.0",
    "cython>=3.0.0",
    "bottleneck>=1.3.7",
    "tables>=3.8.0",
]

# Security enhancements
security = [
    "python-owasp-zap-v2.4>=0.0.21",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "semgrep>=1.45.0",
]

# Full installation (all optional dependencies)
all = [
    "auj-platform[dev,linux,container,monitoring,analytics,performance,security]",
]

[project.scripts]
auj-platform = "auj_platform.src.main:main"
auj-dashboard = "auj_platform.dashboard.launch_dashboard:main"

[project.urls]
Homepage = "https://github.com/olevar2/AUJ"
Repository = "https://github.com/olevar2/AUJ"
Issues = "https://github.com/olevar2/AUJ/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["auj_platform*"]
exclude = ["tests*", "docs*", "*.tests*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-report=json:coverage.json",
    "--cov-fail-under=85",
    "-v"
]
testpaths = [
    "tests",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "performance: Performance and load testing",
    "stress: Stress testing and reliability verification",
    "slow: Tests that take longer to run",
    "mock: Tests using mocked components"
]
python_files = [
    "test_*.py",
    "*_test.py"
]
python_classes = [
    "Test*",
    "*Test"
]
python_functions = [
    "test_*"
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
    "setup.py"
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "coverage_html"

[tool.coverage.json]
output = "coverage.json"
