[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auj-platform"
version = "1.0.0"
description = "Advanced AI Trading Platform for Humanitarian Impact"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AUJ Platform Development Team", email = "support@auj-platform.com"}
]
maintainers = [
    {name = "AUJ Platform Development Team", email = "support@auj-platform.com"}
]
keywords = ["trading", "ai", "machine-learning", "finance", "humanitarian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.14.0",
    "asyncpg>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "databases[postgresql]>=0.7.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "dependency-injector>=4.41.0",
    "structlog>=23.0.0",
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
    "cryptography>=41.0.0",
    "aio-pika>=9.0.0",
    "schedule>=1.2.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.3.0",
    "yfinance>=0.2.0",
    "python-binance>=1.0.0",
    "ccxt>=4.0.0",
    "MetaTrader5>=5.0.0",
    "TA-Lib>=0.4.0",
    "pandas-ta>=0.3.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "seaborn>=0.12.0",
    "streamlit>=1.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
auj-platform = "auj_platform.src.main:main"
auj-dashboard = "auj_platform.dashboard.launch_dashboard:main"

[project.urls]
Homepage = "https://github.com/olevar2/AUJ"
Repository = "https://github.com/olevar2/AUJ"
Issues = "https://github.com/olevar2/AUJ/issues"
Documentation = "https://github.com/olevar2/AUJ/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["auj_platform*"]
exclude = ["tests*", "docs*", "*.tests*"]

[tool.setuptools.package-data]
auj_platform = [
    "config/*.yaml",
    "config/*.yml",
    "dashboard/config/*.yaml",
    "dashboard/utils/*.py",
    "src/core/*.py",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=auj_platform",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-report=json:coverage.json",
    "--cov-fail-under=85",
    "-v"
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "performance: Performance and load testing",
    "stress: Stress testing and reliability verification",
    "slow: Tests that take longer to run",
    "mock: Tests using mocked components"
]

[tool.coverage.run]
source = ["auj_platform"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
    "setup.py"
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod"
]
show_missing = true
skip_covered = false
precision = 2

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = """
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
"""

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
